# ENC-NS-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: analysis.md  implementation.md  index.md  introduction.md  myst.yml  results.md
example/: MiniResNet_augmented.pt  canvas.py  demo.ipynb
src/: data.py  main.py  models.py  train.py
